--- a/frontend--main/package.json
+++ b/frontend--main/package.json
@@ -21,7 +21,8 @@
     "vite": "^5.0.0"
   },
   "dependencies": {
-    "axios": "^1.7.2"
+    "axios": "^1.7.2",
+    "react-router-dom": "^6.26.2"
   },
   "main": "vite.config.js",
   "repository": {
